<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:istanbulandroid="http://schemas.android.com/apk/res-auto" >

    
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_good"
        android:title="@string/settings"
        istanbulandroid:showAsAction="never"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_action_good"
        android:title="@string/about"
        istanbulandroid:showAsAction="never"/>
    <item
        android:id="@+id/menu_contact"
        android:icon="@drawable/ic_action_good"
        android:title="@string/contact"
        istanbulandroid:showAsAction="never"/>
    <item
        android:id="@+id/menu_rate_app"
        android:icon="@drawable/ic_action_good"
        android:title="@string/rate_app"
        istanbulandroid:showAsAction="never"/>

</menu>