<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"  >
    
    <ImageView
    android:id="@+id/loginLogo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:src="@drawable/logo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/projectName"
        android:gravity="center" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/proejctMotto"
        android:gravity="center" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="openRegisterPage"
        android:text="@string/register"
        android:textSize="36dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="openLoginActivity"
        android:text="@string/login"
        android:textSize="36dp" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="openAboutActivity"
        android:text="@string/about"
        android:textSize="36dp" />

</LinearLayout>