<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:contentDescription="@string/image"
                android:src="@drawable/banner" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textWebPassword" />

            <CheckBox
                android:id="@+id/checkBoxRememberMe"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_me" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:onClick="openProblemsActivity"
                android:text="@string/enter"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>